# foruma

./: .env  .gitignore  .mergify.yml  Cargo.toml  Dockerfile  README.md  entrypoint.sh  index.html  sqlx-data.json  workspace.code-workspace
.github/: dependabot.yml
.github/workflows/: chromatic.yml  dependabot_automerge.yaml  deploy.yaml  nodejs.yaml  storybook.yaml  tests.yaml
actix-cors/: Cargo.toml
actix-cors/src/: builder.rs  error.rs  inner.rs  middleware.rs
css/: account-settings.6820fa83.css  account-settings~login~signup.1b61486f.css  app.0157b3d4.css  login.c4f07da2.css  signup.ac46efad.css
docs/: CONTAINER.md
forma-frontend/: README.md  package-lock.json  package.json
forma-web/: Cargo.toml
forma-web/src/: main.rs  startup.rs
forma-web/tests/test_server/: mod.rs
foruma-frontend/: .env  README.md  package-lock.json  package.json  vue.config.js
foruma-frontend/.storybook/: preview-head.html
foruma-frontend/public/: 404.html
foruma-frontend/src/: App.vue  main.ts  shims-vuex.d.ts
foruma-frontend/src/components/: ChangePasswordPanelContainer.vue  ContainerChangePasswordPanel.vue  ContainerChangePasswordPanelContainer.vue  ContainerDeleteYourAccountPanel.vue  ContainerHeader.vue  ContainerLoginForm.vue  ContainerSignupForm.vue  DeleteYourAccountPanelContainer.vue  Header.vue  LoginForm.vue  SignupForm.vue
foruma-frontend/src/graphql/: index.ts
foruma-frontend/src/router/: index.ts
foruma-frontend/src/store/: actions.ts  getters.ts  index.ts  mutations.ts  types.ts  use.ts
foruma-frontend/src/stories/: BaseAlert.stories.js  BaseAlert.vue  BaseButton.stories.js  BaseButton.vue  BaseCard.stories.js  (+39 more)
foruma-web/: Cargo.toml  README.md
foruma-web/src/: configuration.rs  cookie.rs  cors.rs  domain.rs  geoip.rs  http_request_ext.rs  http_session_cookie.rs  lib.rs  main.rs  middleware.rs  startup.rs  telemetry.rs
foruma-web/src/context/: change_password.rs  create_account.rs  create_password.rs  get_account.rs  get_account_sessions.rs  log_in.rs  log_out.rs  login.rs  logout.rs  mod.rs  terminate_account.rs  update_last_active.rs
foruma-web/src/graphql/: mod.rs  model.rs  mutation.rs  query.rs  routes.rs
foruma-web/src/middleware/: cookie_middleware.rs  mod.rs  tracing_middleware.rs
foruma-web/src/routes/: authentication.rs  health.rs  mod.rs
foruma-web/src/routes/account/: mod.rs  terminate.rs
foruma-web/src/routes/authentication/: change_password.rs  login.rs  logout.rs  mod.rs  sessions.rs  signup.rs  whoami.rs
foruma-web/tests/: authentication.rs  health.rs
foruma-web/tests/graphql/: mod.rs
foruma-web/tests/test_server/: mod.rs
js/: about.e02e7bee.js.map  account-settings.febf61e0.js  account-settings.febf61e0.js.map  account-settings~login~signup.894d2048.js  account-settings~login~signup.894d2048.js.map  app.57f5d82e.js  app.57f5d82e.js.map  chunk-vendors.b592f596.js  chunk-vendors.b592f596.js.map  login.85b0ac36.js  login.85b0ac36.js.map  signup.b1ec3ced.js  signup.b1ec3ced.js.map
migrations/: 20210516190400_account.sql  20210624002217_add_user_agent_to_account_session.sql
scripts/: init_db.sh
tracing-actix-web/: Cargo.toml  README.md
tracing-actix-web/src/: lib.rs  middleware.rs  request_id.rs  root_span.rs
(+104 files in other folders)
