[package]
name = "actix-cors"
version = "0.1.0"
authors = ["agabani <agabani@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.6", default-features = false }
actix-service = "2.0.0"

derive_more = "0.99.14"
futures-util = { version = "0.3.15", default-features = false }
log = "0.4.14"
once_cell = "1.8.0"
tinyvec = { version = "1.2.0", features = ["alloc"] }

[dev-dependencies]
actix-rt = "2.2.0"
pretty_env_logger = "0.4.0"
regex = "1.5.4"
