[package]
name = "forma-web"
version = "0.1.0"
authors = ["agabani <agabani@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web ="4.0.0-beta.6"
config = "0.11.0"
serde = "1.0.125"

[dev-dependencies]
actix-rt = "2.2.0"
reqwest = "0.11.3"
tokio = "1.5.0"
