[package]
name = "foruma-web"
version = "0.1.0"
authors = ["agabani <agabani@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web ="4.0.0-beta.6"
cookie = { version = "0.15.0", features=["secure", "percent-encode"] }
config = "0.11.0"
serde = "1.0.125"
tracing = "0.1.26"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.18"

[dev-dependencies]
actix-rt = "2.2.0"
reqwest = { version = "0.11.3", features = ["json"] }
tokio = "1.5.0"
