[package]
name = "foruma-web"
version = "0.1.0"
authors = ["agabani <agabani@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = { path = "../actix-cors" }
actix-web = { version = "4.0.0-beta.6", features = ["secure-cookies"] }
async-trait = "0.1.50"
config = "0.11.0"
ipnetwork = "0.17.0"
pin-project = "1.0.7"
rust-argon2 = "0.8.3"
serde = "1.0.126"
sqlx = { version = "0.5.5", features = ["ipnetwork", "macros", "migrate", "offline", "postgres", "runtime-tokio-rustls", "time"] }
time = "0.2.27"
tracing = "0.1.26"
tracing-actix-web = { path = "../tracing-actix-web" }
tracing-bunyan-formatter = "0.2.4"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.18"
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
actix-rt = "2.2.0"
reqwest = { version = "0.11.3", features = ["json"] }
tokio = "1.6.1"
