[package]
name = "tracing-actix-web"
version = "0.1.0"
authors = ["agabani <agabani@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
tracing = "0.1.26"
tracing-futures = "0.2.5"
futures = "0.3.15"
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
tracing-subscriber = { version = "0.2.19", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.4"
tracing-log = "0.1.2"
